Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Flash Widget
Bug fixes:
~~~~~~~~~~
- DateTime widget: a default value (current date) was presented in view mode if
  widget was required.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Removed dumb LOGs that fill the logs with binary data.